force-app/main/default/objects/Tax_Payer__c/Tax_Payer__c.object-meta.xml
<CustomObject>
    <label>Tax Payer</label>
    <nameField>
        <label>Tax Payer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Payers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>