force-app/main/default/objects/Tax_Payer__c/fields/Average_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>Average_Tax_Paid__c</fullName>
    <formula>Sum_of_tax_paid_till_now__c  /  Count_of_Tax_paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Tax Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>