force-app/main/default/objects/Tax_Payer__c/fields/Count_of_Tax_paid__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Tax_paid__c</fullName>
    <label>Count of Tax paid</label>
    <summaryForeignKey>Tax_Paid_per_month__c.Tax_Payer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>