force-app/main/default/objects/Tax_Payer__c/fields/Highest_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Highest_Tax_Amount__c</fullName>
    <label>Highest Tax Amount</label>
    <summarizedField>Tax_Paid_per_month__c.Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_per_month__c.Tax_Payer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>