force-app/main/default/objects/Tax_Payer__c/fields/Highest_tax_in_2021__c.field-meta.xml
<CustomField>
    <fullName>Highest_tax_in_2021__c</fullName>
    <label>Highest tax in 2021</label>
    <summarizedField>Tax_Paid_per_month__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Tax_Paid_per_month__c.Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Paid_per_month__c.Tax_Payer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>