force-app/main/default/objects/Tax_Payer__c/fields/No_of_times_tax_paid__c.field-meta.xml
<CustomField>
    <fullName>No_of_times_tax_paid__c</fullName>
    <label>No of times tax paid in 2021</label>
    <summaryFilterItems>
        <field>Tax_Paid_per_month__c.Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Paid_per_month__c.Tax_Payer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>