force-app/main/default/objects/Tax_Payer__c/fields/Sum_of_tax_paid_till_now__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_tax_paid_till_now__c</fullName>
    <label>Sum of tax paid till now</label>
    <summarizedField>Tax_Paid_per_month__c.Amount__c</summarizedField>
    <summaryForeignKey>Tax_Paid_per_month__c.Tax_Payer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>